# test_wave_template

./: .appignore  .gitignore  Makefile  README.md  app.toml  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: python-lint.yaml  python-test.yaml  python.yaml  wave-bundle.yaml  wave.yaml
src/: app.py
tests/: test_app.py
